# projet_rs_Telecom

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  comments.txt  rsfind  rsfind.c  test.TEXT  test.sh
headers/: directory.h  file.h  functions.h  launch.h  misc.h
images/: img1  notAnImage
src/: directory.c  file.c  functions.c  launch.c  misc.c  rsfind  rsfind.c
tests/: testsBasiques
tests/filesToExec/: testsBasiques
tests/testEnvironnement/images/: img2
